# xxl-tool

./: README.md
book-server/: .env.simple  .gitignore  Cargo.toml  README.md
book-server/db/: book.sql
book-server/src/: errors.rs  main.rs  utils.rs
book-server/src/entities/: book.rs  mod.rs  prelude.rs
book-server/src/handlers/: auth.rs  book.rs  mod.rs
book-server/src/models/: mod.rs
book-server/src/services/: book.rs  douban.rs  mod.rs  oss.rs
tool-web/src/pages/system/menu/: index.tsx
