[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.8", features = ["redis-rs-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
aliyun-oss-client = "0.12.7"
chrono = "0.4.31"
regex = "1.9.5"
scraper = "0.17.1"
dotenv = "0.15"
md5 = "0.7"
derive_more = "0.99"
sea-orm = { version = "^0.12.2", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
